--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
            </button>
            <a class="navbar-brand" href="#"><img srce="img/w3newbie.png"></a>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
+         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="navbar-nav navbar-right">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
@@ -36,7 +36,7 @@
               <li><a href="#">Testimonials</a></li>
               <li><a href="#">Contact</a></li>
           </ul>
-    </div>
+         </div>
   </div>
   </nav>
 
@@ -125,6 +125,36 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row">
+        <h4><a href="#hidden" data-toggle="collapse">Care to learn more about Bootstrap?</a></h4>
+        <div id="hidden" class="collapse">
+          <h4>Here's the cool thing about Bootstrap...</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+</div>
 
+<footer class="container-fluid text-center">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Contact Us</h3>
+      <br>
+      <h4>Our address and contact info here.</h4>
+    </div>
+    <div class="col-sm-4">
+      <h3>Connect</h3>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-google"></a>
+      <a href="#" class="fa fa-linkedin"></a>
+      <a href="#" class="fa fa-youtube"></a>
+    </div>
+    <div class="col-sm-4">
+      <img src="img/bunny.png" class="icon">
+    </div>
+  </div>
+</footer>
 </body>
 </html>
